# ramonak-stopwords

./: .gitignore  Pipfile  README.md  pyproject.toml  skarnik.py  stopwords.py
data/: all.csv  stopwords-all.txt  stopwords-be-lg.txt  stopwords-md.txt
